Successful user and credential creation

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
                 <input type="submit" name="loginButton">
                 <footer>
                     <p>New User?&#160 </p>
-                    <a href="#"> Click Here to register</a>
+                    <a href="/register"> Click Here to register</a>
                 </footer>
             </form>
         </section>
