--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,9 @@
 					<input type="password" name="password" placeholder="password" required>
                 </span>
 
-                <input type="submit" name="loginButton">
+                <span>
+                    <input type="submit" name="loginButton">
+                </span>
                 <footer>
                     <p>New User?&#160 </p>
                     <a href="/register"> Click Here to register</a>
