--- a/views/login_invalidLogin.ejs
+++ b/views/login_invalidLogin.ejs
@@ -4,7 +4,7 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="loginStyles.css" rel="stylesheet">
+        <link href="loginStylesInvalid.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -12,6 +12,10 @@
     <body>
         <section>
             <form name="loginPane" method="post" id="loginPane" action="/login" enctype="application/x-www-form-urlencoded">
+                <h1>Task-Pulse</h1>
+                <span>
+                    <h3 class="invalidLoginNotif">Invalid Login Credentials</h3>
+                </span>
                 <span>
 					<svg width="27" height="27" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 				    <path fill-rule="evenodd" d="M12 2.4a1.2 1.2 0 0 0-1.2 1.2v1.2a1.2 1.2 0 1 0 2.4 0V3.6A1.2 1.2 0 0 0 12 2.4ZM4.8 4.8h3.6a3.6 3.6 0 0 0 7.2 0h3.6a2.4 2.4 0 0 1 2.4 2.4V18a2.4 2.4 0 0 1-2.4 2.4H4.8A2.4 2.4 0 0 1 2.4 18V7.2a2.4 2.4 0 0 1 2.4-2.4Zm3 8.4a1.8 1.8 0 1 0 0-3.6 1.8 1.8 0 0 0 0 3.6Zm2.94 4.8a3 3 0 1 0-5.88 0h5.88Zm3.66-7.2a1.2 1.2 0 0 0 0 2.4H18a1.2 1.2 0 1 0 0-2.4h-3.6Zm-1.2 4.8a1.2 1.2 0 0 1 1.2-1.2h2.4a1.2 1.2 0 0 1 0 2.4h-2.4a1.2 1.2 0 0 1-1.2-1.2Z" clip-rule="evenodd"></path> </svg>
@@ -25,7 +29,9 @@
 					<input type="password" name="password" placeholder="password" required>
                 </span>
 
-                <input type="submit" name="loginButton">
+                <span>
+                    <input type="submit" id="submitButton" name="loginButton">
+                </span>
                 <footer>
                     <p>New User?&#160 </p>
                     <a href="/register"> Click Here to register</a>
