--- a/staticAssets/loginStylesInvalid.css
+++ b/staticAssets/loginStylesInvalid.css
@@ -56,15 +56,16 @@ input{
 .invalidLoginNotif{
     white-space: nowrap;
     width: fit-content;
-    border-radius: 10px;
     padding: 0.2rem;
     margin-bottom: 0;
     border-style: solid;
-    border-width: 0.2rem;
+    border-width: 0.15rem;
     font-weight: 200;
+    font-family: 'Roboto Mono', monospace;
     border-color: rgba(255, 0, 0, 0.65);
     background:rgba(255, 255, 255, 0.65);
     box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+    margin-bottom:2rem
 }
 
 span{
@@ -101,7 +102,7 @@ button{
 h1{
     background:rgba(255, 255, 255, 0.5);
     border-radius:1rem;
-    margin-bottom:5rem;
+    margin-bottom:3.5rem;
     border-color: rgba(0, 0, 0, 0.4);
 }
 
