Working draft of the home page Responsivness of the header needs work

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,10 +7,57 @@
         <link href="homeStyles.css" rel="stylesheet">
     </head>
     <body>
-        <a href="/projects">Projects</a>
-        <a href="#">Users</a>
-        <a href="#">Manage Organization</a>
-        <a href="#">Manage Tasks</a>
-        <a href="/logout">logout</a>
+        <header>
+            <span id="currentPage">Current Page</span>
+            <span id="notifications">Notification</span>
+            <span id="profile">Profile</span>
+        </header>
+
+        <nav>
+            <img id="taskPulseLogo" src="TaskPulseLogo.png" alt="TaskPulse logo">
+
+
+            <div>
+                <section>
+                   <a class="navLink" href="">Pulse View</a> 
+                </section>
+
+                <section>
+                   <a class="navLink" href="">Project View</a> 
+                </section>
+            </div>
+            <hr>
+            <div>
+                <section>
+                   <a class="navLink" href="">Chats</a> 
+                </section>
+
+                <section>
+                   <a class="navLink"  href="">Tasks</a> 
+                </section>
+
+                <section>
+                   <a class="navLink"  href="">Users</a> 
+                </section>
+
+                <section>
+                   <a class="navLink"  href="">Organization</a> 
+                </section>
+            </div>
+            <hr>
+            <div>
+                <section>
+                   <a class="navLink"  href="">Feedback</a> 
+                </section>
+
+                <section>
+                   <a class="navLink"  href="">Logout</a> 
+                </section>
+            </div>
+        </nav>
+
+        <main>
+            
+        </main>
     </body>
 </html>
