--- a/staticAssets/homeStyles.css
+++ b/staticAssets/homeStyles.css
@@ -12,5 +12,94 @@ html{
 
 a{
     text-decoration: none;
+
     color: var(--text);
+}
+
+body{
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+
+    grid-template-areas: 
+        "nav head head"
+        "nav main main"
+        "nav main main";
+
+    grid-template-rows: 4.5rem 1fr 1fr;
+    grid-template-columns: 15% 2fr;
+}
+
+
+#taskPulseLogo{
+    width: 100%;
+    height: 4.5rem;
+}
+
+hr{
+    border-color: black;
+}
+
+nav{
+    grid-area: nav;
+    grid-auto-flow: column;
+    background-color: var(--secondary);
+    align-items: center;
+}
+
+nav > div {
+    text-align: center;
+}
+
+section{
+    margin: 2rem;
+    display: block;
+    background-color: var(--accent);
+}
+
+section > a {
+    background-color: var(--accent);
+    font-size: 1.25rem;
+    word-wrap: normal;
+    width: 2rem;
+}
+
+
+main{
+    grid-area: main;
+    background-color: var(--background);
+}
+
+#currentPage{
+    background-color: whitesmoke;
+    margin-left: 10%;
+}
+
+#notifications{
+    background-color: whitesmoke;
+    margin-left: 50%;
+}
+
+#profile{
+    background-color: whitesmoke;
+    margin-left: 2%;
+    margin-right: 5%;
+}
+
+header > span {
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    display: inline-block;
+}
+
+header{
+    grid-area: head;
+    grid-auto-flow: row;
+    background-color: var(--accent);
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    width: 100%;
 }
