SQUASH LATER stashing current progress

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,9 +8,11 @@
     </head>
     <body>
         <header>
-            <span id="currentPage">Current Page</span>
-            <span id="notifications">Notification</span>
-            <span id="profile">Profile</span>
+            <div id="headerContainer">
+                <span id="currentPage">Current Page</span>
+                <span id="notifications">Notification</span>
+                <span id="profile">Profile</span>
+            </div>
         </header>
 
         <nav>
