--- a/staticAssets/homeStyles.css
+++ b/staticAssets/homeStyles.css
@@ -91,7 +91,6 @@ main{
 header > span {
     padding: 0.5rem;
     border-radius: 0.25rem;
-    display: inline-block;
 }
 
 header{
@@ -102,4 +101,5 @@ header{
     flex-shrink: 0;
     align-items: center;
     width: 100%;
+    background-color: blue;
 }
