--- a/views/home.html
+++ b/views/home.html
@@ -53,7 +53,7 @@
             </section>
 
             <section>
-                <a class="navLink" href="">Logout</a>
+                <a class="navLink" href="/logout">Logout</a>
             </section>
         </div>
     </nav>
