--- a/views/pulseView.html
+++ b/views/pulseView.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="homeStyles.css" rel="stylesheet">
+    <link href="pulseViewStyles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,8 +20,8 @@
 
 
         <div>
-            <section>
-                <a class="navLink" href="/pulseView">Pulse View</a>
+            <section id="pulseViewSection">
+                <a class="navLink" id="pulseView" href="/pulseView">Pulse View</a>
             </section>
 
             <section>
