Task-Pulse logo goes to homepage

--- a/views/home.html
+++ b/views/home.html
@@ -16,8 +16,7 @@
     </header>
 
     <nav>
-        <img id="taskPulseLogo" src="TaskPulseLogo.png" alt="TaskPulse logo">
-
+        <a href="/"><img id="taskPulseLogo" src="TaskPulseLogo.png" alt="TaskPulse logo"></a>
 
         <div>
             <section>
