--- a/views/pulseView.html
+++ b/views/pulseView.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="pulseViewStyles.css" rel="stylesheet">
+    <script src="./scripts/pulseView.js" defer> </script>
 </head>
 
 <body>
@@ -17,7 +18,6 @@
 
     <nav>
         <a href="/"><img id="taskPulseLogo" src="TaskPulseLogo.png" alt="TaskPulse logo"></a>
-
 
         <div>
             <section id="pulseViewSection">
@@ -58,8 +58,7 @@
         </div>
     </nav>
 
-    <main>
-            <canvas id="canvas"></canvas>
+    <main id="canvasContainer">
     </main>
 </body>
 
